@@ -32,137 +32,144 @@ import net.minecraft.world.item.Tier;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.component.ItemContainerContents;
 import net.minecraft.world.level.Level;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Consumer;
 
 public class DiendriverItem extends BaseBlasterItem {
-	private static final Component UNKNOWN_CONTENTS = Component.translatable("container.shulkerBox.unknownContents");
+    private static final Component UNKNOWN_CONTENTS = Component.translatable("container.shulkerBox.unknownContents");
 
-	public DiendriverItem(Tier toolTier, int Atk, float Spd, Properties prop) {
-		super(toolTier, Atk, Spd, prop.stacksTo(1).component(DataComponents.CONTAINER, ItemContainerContents.EMPTY));
-	}
+    public DiendriverItem(Tier toolTier, int Atk, float Spd, Properties prop) {
+        super(toolTier, Atk, Spd, prop.stacksTo(1).component(DataComponents.CONTAINER, ItemContainerContents.EMPTY));
+    }
 
     @Override
-    public <T extends LivingEntity> int damageItem(ItemStack stack, int amount, @Nullable T entity, Consumer<Item> onBroken) {
-        if (stack.has(DataComponents.CONTAINER) && stack.getDamageValue()==stack.getMaxDamage()-1) {
-            for (ItemStack card : stack.get(DataComponents.CONTAINER).nonEmptyItemsCopy()) entity.spawnAtLocation(card);
+    public <T extends LivingEntity> int damageItem(ItemStack itemStack, int amount, @Nullable T entity, @NotNull Consumer<Item> onBroken) {
+        if (itemStack.has(DataComponents.CONTAINER) && itemStack.getDamageValue() == itemStack.getMaxDamage() - 1) {
+            for (ItemStack card : Objects.requireNonNull(itemStack.get(DataComponents.CONTAINER)).nonEmptyItemsCopy()) {
+                assert entity != null;
+                entity.spawnAtLocation(card);
+            }
             if (entity instanceof ServerPlayer player) player.closeContainer();
-            stack.set(DataComponents.CONTAINER, ItemContainerContents.EMPTY);
+            itemStack.set(DataComponents.CONTAINER, ItemContainerContents.EMPTY);
         }
         return amount;
     }
 
-	@Override
-	public InteractionResultHolder<ItemStack> use(Level world, Player entity, InteractionHand hand) {
-		ItemStack itemstack = entity.getItemInHand(hand);
+    @Override
+    public @NotNull InteractionResultHolder<ItemStack> use(Level world, Player player, InteractionHand interactionHand) {
+        ItemStack itemstack = player.getItemInHand(interactionHand);
 
-		if (entity.isShiftKeyDown()) {
-			if (!world.isClientSide && entity instanceof ServerPlayer serverPlayer) {
-				serverPlayer.openMenu(new MenuProvider() {
-					@Override
-					public Component getDisplayName() {
+        if (player.isShiftKeyDown()) {
+            if (!world.isClientSide && player instanceof ServerPlayer serverPlayer) {
+                serverPlayer.openMenu(new MenuProvider() {
+                    @Override
+                    public @NotNull Component getDisplayName() {
                         return Component.translatable("container.kamenridercraft.diendriver");
-					}
+                    }
 
-					@Override
-					public AbstractContainerMenu createMenu(int id, Inventory inventory, Player player) {
-						FriendlyByteBuf packetBuffer = new FriendlyByteBuf(Unpooled.buffer());
-						packetBuffer.writeBlockPos(entity.blockPosition());
-						packetBuffer.writeByte(hand == InteractionHand.MAIN_HAND ? 0 : 1);
-						return new DiendriverGuiMenu(id, inventory, packetBuffer,itemstack);
-					}
-				}, buf -> {
-					buf.writeBlockPos(entity.blockPosition());
-					buf.writeByte(hand == InteractionHand.MAIN_HAND ? 0 : 1);
-				});
-			}
-			/*OpenAdventDeckProcedure.execute(world, entity.getX(), entity.getY(), entity.getZ(), entity);*/
-			return InteractionResultHolder.sidedSuccess(itemstack, world.isClientSide());
-		}
-		return super.use(world, entity, hand);
-	}
+                    @Override
+                    public AbstractContainerMenu createMenu(int id, @NotNull Inventory inventory, @NotNull Player player) {
+                        FriendlyByteBuf packetBuffer = new FriendlyByteBuf(Unpooled.buffer());
+                        packetBuffer.writeBlockPos(player.blockPosition());
+                        packetBuffer.writeByte(interactionHand == InteractionHand.MAIN_HAND ? 0 : 1);
+                        return new DiendriverGuiMenu(id, inventory, packetBuffer, itemstack);
+                    }
+                }, buf -> {
+                    buf.writeBlockPos(player.blockPosition());
+                    buf.writeByte(interactionHand == InteractionHand.MAIN_HAND ? 0 : 1);
+                });
+            }
+            return InteractionResultHolder.sidedSuccess(itemstack, world.isClientSide());
+        }
+        return super.use(world, player, interactionHand);
+    }
 
-	@Override
-	public void releaseUsing(ItemStack stack, Level level, LivingEntity entityLiving, int timeLeft) {
-		if (entityLiving instanceof Player player && stack.has(DataComponents.CONTAINER) && stack.get(DataComponents.CONTAINER).nonEmptyStream().findAny().isPresent()
-		&& player.getItemBySlot(EquipmentSlot.FEET).getItem() == DecadeRiderItems.DIEND_BELT.get() && ((RiderDriverItem)player.getItemBySlot(EquipmentSlot.FEET).getItem()).isTransformed(player)) {
-			ItemContainerContents contents = stack.get(DataComponents.CONTAINER);
+    @Override
+    public void releaseUsing(ItemStack itemStack, Level level, LivingEntity livingEntity, int timeLeft) {
+        if (livingEntity instanceof Player player && itemStack.has(DataComponents.CONTAINER) && Objects.requireNonNull(itemStack.get(DataComponents.CONTAINER)).nonEmptyStream().findAny().isPresent()
+                && player.getItemBySlot(EquipmentSlot.FEET).getItem() == DecadeRiderItems.DIEND_BELT.get() && ((RiderDriverItem) player.getItemBySlot(EquipmentSlot.FEET).getItem()).isTransformed(player)) {
+            ItemContainerContents contents = itemStack.get(DataComponents.CONTAINER);
 
-			if (contents.nonEmptyStream().anyMatch(item -> (item.getItem() instanceof RiderSummonCardItem && item.is(TagKey.create(Registries.ITEM, ResourceLocation.fromNamespaceAndPath(KamenRiderCraftCore.MOD_ID, "gear/rider_cards/kaijinride")))))) {
-				if (!player.isCreative()) player.getCooldowns().addCooldown(this.asItem(), 200 * (int)contents.nonEmptyStream().filter(item -> (!item.isDamaged() && (item.getItem() instanceof RiderCardItem || item.getItem() instanceof RiderSummonCardItem))).count());
-				List<String> cardNames = new ArrayList<>();
+            assert contents != null;
+            if (contents.nonEmptyStream().anyMatch(item -> (item.getItem() instanceof RiderSummonCardItem && item.is(TagKey.create(Registries.ITEM, ResourceLocation.fromNamespaceAndPath(KamenRiderCraftCore.MOD_ID, "gear/rider_cards/kaijinride")))))) {
+                if (!player.isCreative())
+                    player.getCooldowns().addCooldown(this.asItem(), 200 * (int) contents.nonEmptyStream().filter(item -> (!item.isDamaged() && (item.getItem() instanceof RiderCardItem || item.getItem() instanceof RiderSummonCardItem))).count());
+                List<String> cardNames = new ArrayList<>();
 
-				contents.nonEmptyItems().forEach(card -> {
-					if (card.getItem() instanceof RiderSummonCardItem summonCard && card.is(TagKey.create(Registries.ITEM, ResourceLocation.fromNamespaceAndPath(KamenRiderCraftCore.MOD_ID, "gear/rider_cards/kaijinride")))) {
-						cardNames.add(Component.translatable(card.getItem() + ".name").getString());
-						summonCard.summon(card, level, player);
-					}
-				});
+                contents.nonEmptyItems().forEach(card -> {
+                    if (card.getItem() instanceof RiderSummonCardItem summonCard && card.is(TagKey.create(Registries.ITEM, ResourceLocation.fromNamespaceAndPath(KamenRiderCraftCore.MOD_ID, "gear/rider_cards/kaijinride")))) {
+                        cardNames.add(Component.translatable(card.getItem() + ".name").getString());
+                        summonCard.summon(card, level, player);
+                    }
+                });
 
-				switch (cardNames.size()) {
-					case 1: 
-						player.displayClientMessage(Component.translatable("attack.kamenridercraft.kaijinride", cardNames.getFirst()), true);
-						break;
-					case 2: 
-						player.displayClientMessage(Component.translatable("attack.kamenridercraft.kaijinride_2", cardNames.get(0), cardNames.get(1)), true);
-						break;
-					default: 
-						player.displayClientMessage(Component.translatable("attack.kamenridercraft.kaijinride_3", cardNames.get(0), cardNames.get(1), cardNames.get(2)), true);
-				}
-			} else if (contents.nonEmptyStream().anyMatch(item -> (!item.isDamaged() && (item.getItem() instanceof RiderCardItem || item.getItem() instanceof RiderSummonCardItem)))) {
-				if (!player.isCreative()) player.getCooldowns().addCooldown(this.asItem(), 200 * (int)contents.nonEmptyStream().filter(item -> (!item.isDamaged() && (item.getItem() instanceof RiderCardItem || item.getItem() instanceof RiderSummonCardItem))).count());
-				List<String> cardNames = new ArrayList<>();
+                switch (cardNames.size()) {
+                    case 1:
+                        player.displayClientMessage(Component.translatable("attack.kamenridercraft.kaijinride", cardNames.getFirst()), true);
+                        break;
+                    case 2:
+                        player.displayClientMessage(Component.translatable("attack.kamenridercraft.kaijinride_2", cardNames.get(0), cardNames.get(1)), true);
+                        break;
+                    default:
+                        player.displayClientMessage(Component.translatable("attack.kamenridercraft.kaijinride_3", cardNames.get(0), cardNames.get(1), cardNames.get(2)), true);
+                }
+            } else if (contents.nonEmptyStream().anyMatch(item -> (!item.isDamaged() && (item.getItem() instanceof RiderCardItem || item.getItem() instanceof RiderSummonCardItem)))) {
+                if (!player.isCreative())
+                    player.getCooldowns().addCooldown(this.asItem(), 200 * (int) contents.nonEmptyStream().filter(item -> (!item.isDamaged() && (item.getItem() instanceof RiderCardItem || item.getItem() instanceof RiderSummonCardItem))).count());
+                List<String> cardNames = new ArrayList<>();
 
-				contents.nonEmptyItems().forEach(card -> {
-					if (card.getItem() instanceof RiderCardItem summonCard && !card.isDamaged()) {
-						cardNames.add(Component.translatable(card.getItem() + ".name").getString());
-						summonCard.summon(card, level, player);
-					} else if (card.getItem() instanceof RiderSummonCardItem summonCard) {
-						cardNames.add(Component.translatable(card.getItem() + ".name").getString());
-						summonCard.summon(card, level, player);
-					}
-				});
+                contents.nonEmptyItems().forEach(card -> {
+                    if (card.getItem() instanceof RiderCardItem summonCard && !card.isDamaged()) {
+                        cardNames.add(Component.translatable(card.getItem() + ".name").getString());
+                        summonCard.summon(card, level, player);
+                    } else if (card.getItem() instanceof RiderSummonCardItem summonCard) {
+                        cardNames.add(Component.translatable(card.getItem() + ".name").getString());
+                        summonCard.summon(card, level, player);
+                    }
+                });
 
-				switch (cardNames.size()) {
-					case 1:
-						player.displayClientMessage(Component.translatable("attack.kamenridercraft.kamenride", cardNames.getFirst()), true);
-						break;
-					case 2:
-						player.displayClientMessage(Component.translatable("attack.kamenridercraft.kamenride_2", cardNames.get(0), cardNames.get(1)), true);
-						break;
-					default:
-						player.displayClientMessage(Component.translatable("attack.kamenridercraft.kamenride_3", cardNames.get(0), cardNames.get(1), cardNames.get(2)), true);
-				}
-			} else {
-				if (!player.isCreative()) player.getCooldowns().addCooldown(this.asItem(), 200);
+                switch (cardNames.size()) {
+                    case 1:
+                        player.displayClientMessage(Component.translatable("attack.kamenridercraft.kamenride", cardNames.getFirst()), true);
+                        break;
+                    case 2:
+                        player.displayClientMessage(Component.translatable("attack.kamenridercraft.kamenride_2", cardNames.get(0), cardNames.get(1)), true);
+                        break;
+                    default:
+                        player.displayClientMessage(Component.translatable("attack.kamenridercraft.kamenride_3", cardNames.get(0), cardNames.get(1), cardNames.get(2)), true);
+                }
+            } else {
+                if (!player.isCreative()) player.getCooldowns().addCooldown(this.asItem(), 200);
 
-				ItemStack card = contents.nonEmptyItems().iterator().next();
-				if (card.getItem() instanceof AttackRideCardItem attack) {
-					player.displayClientMessage(Component.translatable("attack.kamenridercraft.attackride_diend", Component.translatable(card.getItem() + ".name").getString()), true);
-					if (!level.isClientSide()) attack.attackride(level, player);
-					card.shrink(1);
-				}
-			}
+                ItemStack card = contents.nonEmptyItems().iterator().next();
+                if (card.getItem() instanceof AttackRideCardItem attack) {
+                    player.displayClientMessage(Component.translatable("attack.kamenridercraft.attackride_diend", Component.translatable(card.getItem() + ".name").getString()), true);
+                    if (!level.isClientSide()) attack.attackride(level, player);
+                    card.shrink(1);
+                }
+            }
 
-			stack.hurtAndBreak(1, player, LivingEntity.getSlotForHand(player.getUsedItemHand()));
-			level.playSound(null, player.getX(), player.getY(), player.getZ(), SoundEvents.BLAZE_SHOOT, SoundSource.PLAYERS, 1.0F, 1.0F / (level.getRandom().nextFloat() * 0.4F + 1.2F) + 1 * 0.5F);
-			player.awardStat(Stats.ITEM_USED.get(this));
-		} else super.releaseUsing(stack, level, entityLiving, timeLeft);
-	}
+            itemStack.hurtAndBreak(1, player, LivingEntity.getSlotForHand(player.getUsedItemHand()));
+            level.playSound(null, player.getX(), player.getY(), player.getZ(), SoundEvents.BLAZE_SHOOT, SoundSource.PLAYERS, 1.0F, 1.0F / (level.getRandom().nextFloat() * 0.4F + 1.2F) + 1 * 0.5F);
+            player.awardStat(Stats.ITEM_USED.get(this));
+        } else super.releaseUsing(itemStack, level, livingEntity, timeLeft);
+    }
 
-	public void appendHoverText(ItemStack stack, Item.TooltipContext context, List<Component> tooltipComponents, TooltipFlag tooltipFlag) {
-		super.appendHoverText(stack, context, tooltipComponents, tooltipFlag);
-		if (stack.has(DataComponents.CONTAINER_LOOT)) {
-			tooltipComponents.add(UNKNOWN_CONTENTS);
-		}
+    public void appendHoverText(@NotNull ItemStack itemStack, Item.@NotNull TooltipContext context, @NotNull List<Component> tooltipComponents, @NotNull TooltipFlag tooltipFlag) {
+        super.appendHoverText(itemStack, context, tooltipComponents, tooltipFlag);
+        if (itemStack.has(DataComponents.CONTAINER_LOOT)) {
+            tooltipComponents.add(UNKNOWN_CONTENTS);
+        }
 
-		int i = 0;
-		int j = 0;
+        int i = 0;
+        int j = 0;
 
-        for (ItemStack itemstack : stack.getOrDefault(DataComponents.CONTAINER, ItemContainerContents.EMPTY).nonEmptyItems()) {
+        for (ItemStack itemstack : itemStack.getOrDefault(DataComponents.CONTAINER, ItemContainerContents.EMPTY).nonEmptyItems()) {
             ++j;
             if (i <= 4) {
                 ++i;
@@ -170,9 +177,8 @@ public class DiendriverItem extends BaseBlasterItem {
             }
         }
 
-		if (j - i > 0) {
-			tooltipComponents.add(Component.translatable("container.shulkerBox.more", j - i).withStyle(ChatFormatting.ITALIC));
-		}
-
-	}
+        if (j - i > 0) {
+            tooltipComponents.add(Component.translatable("container.shulkerBox.more", j - i).withStyle(ChatFormatting.ITALIC));
+        }
+    }
 }
